--- a/social_auth_reddit.info.yml
+++ b/social_auth_reddit.info.yml
@@ -1,5 +1,5 @@
 name: Social Auth Reddit
-description: 'Social Auth Reddit Integration for Reddit'
+description: 'Social Auth Integration for Reddit.'
 core: 8.x
 type: module
 package: Social
