Update composer.json to follow standards.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "source": "http://cgit.drupalcode.org/social_auth_reddit"
     },
     "require": {
-        "rtheunissen/oauth2-reddit: ^2.0"
+        "rtheunissen/oauth2-reddit": "^2.0"
     },
     "authors": [
         {
