--- a/social_auth_reddit.info.yml
+++ b/social_auth_reddit.info.yml
@@ -1,8 +1,8 @@
 name: Social Auth Reddit
-description: 'Social Auth Integration for Reddit.'
+description: 'Social Auth integration for Reddit.'
 core: 8.x
 type: module
 package: Social
 configure: social_auth_reddit.settings_form
 dependencies:
-  - drupal:social_auth (>= 8.x-2.x)
+  - social_auth:social_auth (>= 8.x-2.x)
